<resources>
    <string name="app_name">Pinned</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Senha</string>
    <string name="login_login_button">Entrar</string>
    <string name="login_email_hint">seu@email.com</string>
    <string name="login_password_hint">Sua senha</string>
    <string name="post_description"><b>\@%1s</b> %2s</string>
    <string name="procurar">Procurar...</string>
    <string name="insert_description">Insira uma descricao...</string>
    <string name="at_other_place">Estou em outro lugar</string>
    <string name="submit">Postar</string>
    <string name="new_checkin">Novo check-in</string>
</resources>